<resources>
    <string name="app_name">Uninder</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="matches">Matches</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="savingConfiguration">We are saving your configuration...</string>
    <string name="tellus">Tell us about yourself</string>
    <string name="initialConfig">Initial configuration</string>
    <string name="gender">Gender</string>
    <string name="genderLooked">Gender looked</string>
    <!-- preferences -->
    <string name="preferencOverall">Personal Settings</string>
    <string name="prefName">Name</string>
    <string name="prefNameDesc">Change your name in Uninder</string>
    <string name="prefNameDialog">New Name</string>

    <string name="prefDesc">Description</string>
    <string name="prefDescDesc">Change your description in Uninder</string>
    <string name="prefDescDialog">New Description</string>
    <string name="session">Session</string>
    <string name="endSession">Close Session</string>
    <string name="prefPhoto">Change Photo</string>
    <string name="photUploadSuccess">Photo upload!</string>
    <string name="photUploadError">Error while uploading, please try again!</string>
    <string name="loggedOut">Logged out!</string>

    <string name="loggedIn">¡Logged in!</string>
    <string name="logginError">Error logging in, please try again!</string>

    <string name="loadingContent">Loading...</string>
    <string name="noMorePeopleTitle">Done for today</string>
    <string name="noMorePeople">There are no more people, you will have to wait :(</string>

    <string name="newmatch">Match</string>
    <string name="notification">Notifications</string>



    <string name="welcomeMessageBody">We have saved your preferences. Do not forget to upload a profile picture right down in configuration section, you will have more opportunities ;)</string>
    <string name="welcomeMessageTitle">Welcome!</string>


</resources>
