<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"   android:id="@+id/settings">

    <PreferenceCategory

        android:title="@string/preferencOverall">

        <EditTextPreference
            android:id="@+id/settingsEditName"
            android:dialogLayout="@layout/pref_dialog_edittext_fix"
            android:dialogTitle="@string/prefNameDialog"
            android:key="preference_name"
            android:summary="@string/prefNameDesc"
            android:title="@string/prefName" />


        <EditTextPreference
            android:id="@+id/settingsEditDesc"
            android:dialogLayout="@layout/pref_dialog_edittext_fix"
            android:dialogTitle="@string/prefDescDialog"
            android:key="preference_desc"
            android:summary="@string/prefDescDesc"
            android:title="@string/prefDesc" />

        <Preference
            android:id="@+id/settingPicture"
            android:key="preference_change_photo"
            android:title="@string/prefPhoto"></Preference>

        <Preference
            android:id="@+id/notifications"
            android:key="preference_notification"
            android:title="@string/notification"></Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/session">

        <Preference
            android:id="@+id/settingsCloseSession"
            android:key="preference_close_session"
            android:title="@string/endSession"></Preference>

    </PreferenceCategory>


</PreferenceScreen>